--- a/src/components/character/Character.css
+++ b/src/components/character/Character.css
@@ -1,39 +1,45 @@
-/* Characters.css */
-  
-  .character-card {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 15px;
-    text-align: center;
-    transition: transform 0.2s ease;
-    
-  }
-  
-  .character-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-  }
-  
-  .character-card h3 {
-    font-size: 18px;
-    color: #333;
-    margin-bottom: 10px;
-  }
-  
-  .character-card button {
-    background-color: #007BFF;
-    border: none;
-    border-radius: 4px;
-    color: white;
-    cursor: pointer;
-    padding: 8px 12px;
-    font-size: 14px;
-    margin-top: 10px;
-    transition: background-color 0.2s ease;
-  }
-  
-  .character-card button:hover {
-    background-color: #0056b3;
-  }
-  
+.character-card {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  padding: 15px;
+  text-align: center;
+  transition: transform 0.2s ease;
+  max-width: 250px; /* Define un ancho máximo */
+  margin: 0 auto; /* Centra la tarjeta dentro del carrusel */
+  overflow: hidden; /* Evita que el contenido se desborde */
+}
+
+.character-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
+
+.character-image {
+  width: 100%; /* Hace que la imagen ocupe el 100% del ancho de la tarjeta */
+  height: auto; /* Mantiene la proporción */
+  border-radius: 8px; /* Coincide con el borde redondeado de la tarjeta */
+  transition: transform 0.2s ease; /* Transición suave en hover */
+}
+
+.character-card h3 {
+  font-size: 18px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.character-card button {
+  background-color: #007BFF;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  padding: 8px 12px;
+  font-size: 14px;
+  margin-top: 10px;
+  transition: background-color 0.2s ease;
+}
+
+.character-card button:hover {
+  background-color: #0056b3;
+}
