--- a/src/components/planet/Planet.css
+++ b/src/components/planet/Planet.css
@@ -1,40 +1,45 @@
-/* Characters.css */
+.planet-card {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  padding: 15px;
+  text-align: center;
+  transition: transform 0.2s ease;
+  max-width: 250px;
+  margin: 0 auto;
+  overflow: hidden;
+}
 
+.planet-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
 
-  
-  .planet-card {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 15px;
-    text-align: center;
-    transition: transform 0.2s ease;
-  }
-  
-  .planet-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-  }
-  
-  .planet-card h3 {
-    font-size: 18px;
-    color: #333;
-    margin-bottom: 10px;
-  }
-  
-  .planet-card button {
-    background-color: #007BFF;
-    border: none;
-    border-radius: 4px;
-    color: white;
-    cursor: pointer;
-    padding: 8px 12px;
-    font-size: 14px;
-    margin-top: 10px;
-    transition: background-color 0.2s ease;
-  }
-  
-  .planet-card button:hover {
-    background-color: #0056b3;
-  }
-  
+.planet-card img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  transition: transform 0.2s ease;
+}
+
+.planet-card h3 {
+  font-size: 18px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.planet-card button {
+  background-color: #007BFF;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  padding: 8px 12px;
+  font-size: 14px;
+  margin-top: 10px;
+  transition: background-color 0.2s ease;
+}
+
+.planet-card button:hover {
+  background-color: #0056b3;
+}
